--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,31 +15,44 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
-            android:weightSum="1"
-            tools:ignore="UselessParent">
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/about"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
-                android:text="@string/about" >
+                android:text="@string/about"
+                android:textSize="18dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip">
             </TextView>
 
             <TextView
                 android:id="@+id/title2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
-                android:text="@string/title2" >
+                android:text="@string/title2"
+                android:textColor="#4C0E0F"
+                android:textSize="24dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
+                android:layout_weight="0.05">
             </TextView>
 
             <TextView
                 android:id="@+id/histo1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
                 android:text="@string/histo1"
+                android:textSize="18dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
                 android:layout_weight="0.34">
             </TextView>
 
@@ -47,7 +60,11 @@
                 android:id="@+id/histo2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
+                android:textSize="18dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
                 android:text="@string/histo2" >
             </TextView>
 
@@ -55,7 +72,12 @@
                 android:id="@+id/title3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
+                android:textColor="#4C0E0F"
+                android:textSize="24dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
                 android:text="@string/title3" >
             </TextView>
 
@@ -63,7 +85,11 @@
                 android:id="@+id/grammer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
+                android:textSize="18dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
                 android:text="@string/grammer" >
             </TextView>
 
@@ -71,7 +97,11 @@
                 android:id="@+id/grammer2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dip"
+                android:textSize="18dp"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="20dip"
+                android:layout_marginRight="20dip"
                 android:text="@string/grammer2" >
             </TextView>
 
